<resources>
    <string name="app_name">Hoot</string>
    <string name="title_activity_login">Логин</string>
    <string name="title_activity_registration">Регистрация</string>
    <string name="title_activity_actors">Актеры</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="casts">Кастинги</string>
    <string name="myCasts">Мои кастинги</string>
    <string name="cast_search">Поиск кастингов</string>
    <string name="director">Режиссер:</string>
    <string name="cast_about_cast_text">О фильме</string>
    <string name="want_cast">Хочу в кастинг!</string>
    <string name="respond_cancel">Отменить</string>
    <string name="age">Возраст:</string>
    <string name="city">Город:</string>
    <string name="invite_cast">Пригласить</string>
    <string name="portfolio">Портфолио</string>
    <string name="favtext">Избранные</string>
    <string name="initals">Дастан Байболатов</string>
    <string name="actor_status">Готов к сьемкам</string>
    <string name="change_account_type">Изменить тип аккаунта</string>
    <string name="actors_cast_progress">Прогресс результата кастингов</string>
    <string name="actors_cast_progress_percent">75%</string>
    <string name="account_type_hint">Выберите тип аккаунта</string>
    <string name="profile">Профиль</string>
    <string name="actors">Актеры</string>
    <string name="search_hint">Поиск актеров</string>
</resources>