<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/profile_page"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        android:orientation="vertical"
        android:padding="20dp"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- MiniLogo -->

            <ImageView
                android:id="@+id/mini_logo_image"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="-15dp"
                android:src="@drawable/logo"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/profile"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />

        </RelativeLayout>


        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            app:cardCornerRadius="200dp">

            <ImageView
                android:id="@+id/profile_actor__photo"
                android:layout_width="300dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                android:background="@drawable/qash" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/main_activity__hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/initals"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="40dp"
            app:cardCornerRadius="40dp"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/profile_actor__status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:layout_marginStart="35dp"
                    android:text="@string/actor_status"
                    android:textColor="@color/primary"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Switch
                    android:id="@+id/profile_actor_status__switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginStart="60dp"
                    android:background="@drawable/outline_black_stroke"
                    android:checked="false"
                    android:scaleX="1.5"
                    android:scaleY="1.5"
                    android:thumbTint="@drawable/thumb"
                    android:trackTint="@color/white"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/change_account_type"
            android:textColor="@color/background"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry"
            />

        <Spinner
            android:id="@+id/account_type__spinner"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:autofillHints="Actor"
            android:background="@drawable/edit_text"
            android:hint="@string/account_type_hint"
            android:inputType="text"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textAlignment="center"
            android:textColor="@color/primary"
            android:textColorHint="@color/primary"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="#00000000"
            android:paddingStart="20dp"
            android:text="@string/actors_cast_progress"
            android:textColor="@color/background"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ProgressBar
                android:id="@+id/PROGRESS_BAR"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:indeterminateTint="@color/background"
                android:max="100"
                android:progress="75"
                android:visibility="visible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/PROGRESS_BAR"
                android:layout_alignTop="@id/PROGRESS_BAR"
                android:layout_alignEnd="@id/PROGRESS_BAR"
                android:layout_alignBottom="@id/PROGRESS_BAR"
                android:background="#00000000"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/actors_cast_progress_percent"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </RelativeLayout>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        app:itemIconTint="@color/primary"
        app:itemTextColor="@color/primary"
        app:menu="@menu/bottom_nav_menu"
        android:visibility="visible"
        android:translationZ="1dp"
        android:layout_gravity="bottom" />
</FrameLayout>
