<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cast_card_view"
    android:layout_width="match_parent"
    android:layout_height="600dp"
    android:layout_marginBottom="12dp"
    android:background="@color/main_background"
    android:clickable="true"
    app:cardCornerRadius="40dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:id="@+id/cast_about_image"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_gravity="top"
            android:adjustViewBounds="true"
            android:background="@drawable/qash"
            android:contentDescription="@string/app_name"
            android:bottomRightRadius="10dp"
            android:bottomLeftRadius="10dp"
            android:topLeftRadius="10dp"
            android:topRightRadius="10dp" />

        <FrameLayout
            android:id="@+id/cast_card_about_parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/cast_about_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center_horizontal"
                    android:layout_marginTop="20dp"
                    android:text="@string/app_name"
                    android:textColor="@color/primary"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cast_about_director"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_horizontal"
                    android:layout_marginStart="20dp"
                    android:text="@string/director"
                    android:textColor="@color/primary"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cast_about_cast_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_horizontal"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/cast_about_cast_text"
                    android:textColor="@color/primary"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cast_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/app_name"
                    android:textColor="@color/primary"
                    android:textSize="20sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginTop="130dp"
                    android:clickable="true"
                    android:text="@string/want_cast"
                    android:textColor="@color/white"
                    android:bottomRightRadius="50dp"
                    android:bottomLeftRadius="50dp"
                    android:topLeftRadius="50dp"
                    android:topRightRadius="50dp"/>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>