<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cast_history_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    android:clickable="true"
    app:cardCornerRadius="15dp"
    app:cardElevation="5dp"
    app:strokeColor="@color/white"
    app:strokeWidth="2dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/cast_history_card__parent"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/primary"
            >

            <androidx.cardview.widget.CardView
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:cardCornerRadius="50dp"
                android:layout_marginStart="20dp"
                android:layout_gravity="center_vertical"
                >
                <ImageView
                    android:id="@+id/cast_history_card__poster"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/qash"
                    android:adjustViewBounds="true"
                    android:layout_gravity="center_horizontal"
                    />
            </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/cast_history_card__name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="18dp"
                    android:layout_marginStart="100dp"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cast_history_card__director"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/cast_history_card__type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginRight="100dp"
                    android:text="@string/app_name"
                    android:textColor="@color/cast_type_color"
                    android:textSize="15sp" />
            <androidx.cardview.widget.CardView
                android:id="@+id/cast_history_card__result"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:cardCornerRadius="50dp"
                android:layout_marginEnd="20dp"
                android:layout_gravity="center_vertical|end"
                app:cardBackgroundColor="@color/cast_agreed"
                />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/cast_about_parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:translationZ="10dp"
            android:visibility="gone"
            >

            <TextView
                android:id="@+id/cast_about_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/app_name"
                android:textColor="@color/primary"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cast_about_director"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_horizontal"
                android:layout_marginStart="20dp"
                android:text="@string/director"
                android:textColor="@color/primary"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cast_about_cast_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/cast_about_cast_text"
                android:textColor="@color/primary"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cast_about_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/app_name"
                android:textColor="@color/primary"
                android:textSize="15sp" />

            <Button
                android:id="@+id/card_respond_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="-90dp"
                android:bottomLeftRadius="50dp"
                android:bottomRightRadius="50dp"
                android:clickable="true"
                android:text="@string/respond_cancel"
                android:textColor="@color/white"
                android:topLeftRadius="50dp"
                android:topRightRadius="50dp"
                android:visibility="gone"
                />
            <Button
                android:id="@+id/card_respond_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="90dp"
                android:bottomLeftRadius="50dp"
                android:bottomRightRadius="50dp"
                android:clickable="true"
                android:text="@string/want_cast"
                android:textColor="@color/white"
                android:topLeftRadius="50dp"
                android:topRightRadius="50dp" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>