<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/list_item_actor__parent"
    android:layout_marginBottom="15dp"
    app:cardCornerRadius="7dp"
    app:cardElevation="7dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/list_item_actor__img_block">

            <ImageView
                android:id="@+id/list_item_actor__img"
                android:layout_width="130dp"
                android:layout_height="150dp"
                android:src="@drawable/ic_baseline_person_24"/>

        </com.google.android.material.card.MaterialCardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/list_item_actor__img_block">

            <TextView
                android:id="@+id/list_item_actor__fullname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/primary"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/list_item_actor__age_title"
                android:layout_below="@id/list_item_actor__fullname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textColor="@color/primary"
                android:textSize="13sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/list_item_actor__age_txt"
                android:layout_below="@id/list_item_actor__fullname"
                android:layout_toEndOf="@id/list_item_actor__age_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="22"
                android:textColor="@color/primary"
                android:textSize="13sp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/list_item_actor__address_title"
                android:layout_below="@id/list_item_actor__age_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:textColor="@color/primary"
                android:textSize="13sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/list_item_actor__address_txt"
                android:layout_below="@id/list_item_actor__age_title"
                android:layout_toEndOf="@id/list_item_actor__address_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Казахстан, Алматы"
                android:textColor="@color/primary"
                android:textSize="13sp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"/>

<!--            <Button-->
<!--                android:id="@+id/list_item_actor__portfolio_btn"-->
<!--                android:layout_below="@id/list_item_actor__address_txt"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="45dp"-->
<!--                android:layout_marginStart="10dp"-->
<!--                android:bottomLeftRadius="50dp"-->
<!--                android:bottomRightRadius="50dp"-->
<!--                android:clickable="true"-->
<!--                android:text="@string/portfolio"-->
<!--                android:textAllCaps="false"-->
<!--                android:textColor="@color/white"-->
<!--                android:textSize="10sp"-->
<!--                android:topLeftRadius="50dp"-->
<!--                android:topRightRadius="50dp" />-->

            <LinearLayout
                android:id="@+id/list_item_actor__btns_block"
                android:layout_below="@+id/list_item_actor__address_txt"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp">

                <Button
                    android:id="@+id/list_item_actor__invite_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:bottomLeftRadius="50dp"
                    android:bottomRightRadius="50dp"
                    android:topLeftRadius="50dp"
                    android:topRightRadius="50dp"
                    android:clickable="true"
                    android:text="@string/invite_cast"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    android:layout_marginEnd="10dp"
                    android:layout_gravity="bottom"
                    android:layout_weight="90"/>

                <Button
                    android:id="@+id/list_item_actor__cancel_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:bottomLeftRadius="50dp"
                    android:bottomRightRadius="50dp"
                    android:topLeftRadius="50dp"
                    android:topRightRadius="50dp"
                    android:clickable="true"
                    android:text="@string/respond_cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    android:layout_marginEnd="10dp"
                    android:layout_gravity="bottom"
                    android:layout_weight="90"
                    android:backgroundTint="@color/cast_disagreed"
                    android:visibility="gone"/>

                <ImageButton
                    android:id="@+id/list_item_actor__fav_btn"
                    android:layout_width="30dp"
                    android:layout_height="45dp"
                    android:layout_gravity="bottom"
                    android:layout_weight="10"
                    android:bottomLeftRadius="50dp"
                    android:bottomRightRadius="50dp"
                    android:clickable="true"
                    android:src="@drawable/ic_outline_favorite_border_24"
                    android:backgroundTint="@color/primary"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:topLeftRadius="50dp"
                    android:topRightRadius="50dp" />

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>